--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "250525_tamurisu",
   "version": "0.1.0",
   "private": true,
+    "homepage": "https://tsuyukusado.github.io/Tamurisu",
   "dependencies": {
     "@anthropic-ai/claude-code": "^1.0.22",
     "@emotion/react": "^11.14.0",
@@ -36,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
