--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "250525_tamurisu",
   "version": "0.1.0",
   "private": true,
-    "homepage": "https://tsuyukusado.github.io/Tamurisu",
+  "homepage": "https://tsuyukusado.github.io/Tamurisu",
   "dependencies": {
     "@anthropic-ai/claude-code": "^1.0.22",
     "@emotion/react": "^11.14.0",
@@ -14,6 +14,7 @@
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@hello-pangea/dnd": "^18.0.1",
+    "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "@mui/x-date-pickers": "^8.5.2",
     "@testing-library/dom": "^10.4.0",
