--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "@mui/material": "^7.1.2",
     "@mui/x-date-pickers": "^8.5.2",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
@@ -61,6 +59,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "gh-pages": "^6.3.0",
+    "jest": "^27.5.1"
   }
 }
